--- a/TUW_System.TS1/TUW_System.TS1.csproj
+++ b/TUW_System.TS1/TUW_System.TS1.csproj
@@ -167,6 +167,12 @@
     <Compile Include="frmTS1_WorkOrder.designer.cs">
       <DependentUpon>frmTS1_WorkOrder.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTS1_WorkOrder40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_WorkOrder40.designer.cs">
+      <DependentUpon>frmTS1_WorkOrder40.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -228,6 +234,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_WorkOrder.resx">
       <DependentUpon>frmTS1_WorkOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_WorkOrder40.resx">
+      <DependentUpon>frmTS1_WorkOrder40.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Resource1.resx">
