--- a/TUW System/TUW System.csproj
+++ b/TUW System/TUW System.csproj
@@ -216,10 +216,10 @@
       <DependentUpon>PACKING_ORDER40.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Report\TS1\PURCHASE ORDER_N.cs">
+    <Compile Include="Report\TS1\PURCHASE ORDER_N40.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>PURCHASE ORDER_N.rpt</DependentUpon>
+      <DependentUpon>PURCHASE ORDER_N40.rpt</DependentUpon>
       <SubType>Component</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
@@ -400,9 +400,9 @@
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>PACKING_ORDER.cs</LastGenOutput>
     </Content>
-    <Content Include="Report\TS1\PURCHASE ORDER_N.rpt">
+    <Content Include="Report\TS1\PURCHASE ORDER_N40.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>PURCHASE ORDER_N.cs</LastGenOutput>
+      <LastGenOutput>PURCHASE ORDER_N40.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Report\S5\S5_ReceiveNote.rpt">
