--- a/TUW_System.TS1/TUW_System.TS1.csproj
+++ b/TUW_System.TS1/TUW_System.TS1.csproj
@@ -143,17 +143,35 @@
     <Compile Include="frmTS1_PurchaseSummary.designer.cs">
       <DependentUpon>frmTS1_PurchaseSummary.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTS1_PurchaseSummary40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_PurchaseSummary40.designer.cs">
+      <DependentUpon>frmTS1_PurchaseSummary40.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTS1_Receive.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmTS1_Receive.designer.cs">
       <DependentUpon>frmTS1_Receive.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmTS1_Receive40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_Receive40.designer.cs">
+      <DependentUpon>frmTS1_Receive40.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTS1_ReceiveCSV.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmTS1_ReceiveCSV.Designer.cs">
+    <Compile Include="frmTS1_ReceiveCSV.designer.cs">
       <DependentUpon>frmTS1_ReceiveCSV.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTS1_ReceiveCSV40.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTS1_ReceiveCSV40.Designer.cs">
+      <DependentUpon>frmTS1_ReceiveCSV40.cs</DependentUpon>
     </Compile>
     <Compile Include="frmTS1_TPiCSContract.cs">
       <SubType>Form</SubType>
@@ -229,11 +247,20 @@
     <EmbeddedResource Include="frmTS1_PurchaseSummary.resx">
       <DependentUpon>frmTS1_PurchaseSummary.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_PurchaseSummary40.resx">
+      <DependentUpon>frmTS1_PurchaseSummary40.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_Receive.resx">
       <DependentUpon>frmTS1_Receive.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_Receive40.resx">
+      <DependentUpon>frmTS1_Receive40.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_ReceiveCSV.resx">
       <DependentUpon>frmTS1_ReceiveCSV.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTS1_ReceiveCSV40.resx">
+      <DependentUpon>frmTS1_ReceiveCSV40.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTS1_TPiCSContract.resx">
       <DependentUpon>frmTS1_TPiCSContract.cs</DependentUpon>
